[gd_scene load_steps=12 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/images/Asteroids_32x32_001.png" type="Texture" id=2]
[ext_resource path="res://player/dmunk-grinding-a-penny-against-a-rock_V1.wav" type="AudioStream" id=3]
[ext_resource path="res://player/dmunk-grinding-a-penny-against-a-rock_V2.wav" type="AudioStream" id=4]
[ext_resource path="res://player/dmunk-grinding-a-penny-against-a-rock_V3.wav" type="AudioStream" id=5]
[ext_resource path="res://player/florianreichelt_soft-wind.wav" type="AudioStream" id=6]
[ext_resource path="res://player/portal_generic_v4.wav" type="AudioStream" id=7]
[ext_resource path="res://player/portal_generic_v3.wav" type="AudioStream" id=8]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.25

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[sub_resource type="CircleShape2D" id=3]
radius = 15.0542

[node name="Player" type="RigidBody2D"]
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PlayerImg" type="Sprite" parent="CollisionShape2D"]
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 3, 3 )

[node name="MoveOnAsteroidSoundV1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="MoveOnAsteroidSoundV2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="MoveOnAsteroidSoundV3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="PortalSensor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalSensor"]
shape = SubResource( 3 )

[node name="FlyThroughSpace" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="CopperPortalEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="IronPortalEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Player_body_exited"]
[connection signal="area_entered" from="PortalSensor" to="." method="_on_PortalSensor_area_entered"]
[connection signal="area_exited" from="PortalSensor" to="." method="_on_PortalSensor_area_exited"]
